FIxed join us button left padding on tablets

--- a/_sass/partials/general.scss
+++ b/_sass/partials/general.scss
@@ -514,6 +514,7 @@ html {
     border: solid 1px $join-us-btn-border-color;
     border-radius: 0;
     padding: 8px 10px !important;
+    padding-left: 0 !important;
     -webkit-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s;
